k8s/deployment.yaml
kind: Service
apiVersion: v1
metadata:
  name: employeecare-svc
  namespace: mypfe
  labels:
    name: employeecare-app
spec:
  ports:
    - name: app-http 
      port: 8080      
      targetPort: 8080  
      protocol: TCP
  selector:           
    app: employeecare-app
  type: ClusterIP
  #ClusterIP: None   
---
apiVersion: apps/v1 
kind: Deployment    
metadata:              
  name: employeecare-app
  namespace: mypfe
spec:                
  selector:         
    matchLabels:
      app: employeecare-app
  replicas: 2     
  template:
    metadata:
      labels:        
        app: employeecare-app
    spec:
      containers:
        - name: employeecare-app
          image: acrzied.azurecr.io/employeecare:1.0.43
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 200m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 500Mi
