k8s/jenkins-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-service
  namespace: jenkins
spec:
  ports:
  - name: jenkins-http
    port: 80
    protocol: TCP
    targetPort: 8080
  - name: jenkins-jnlp
    port: 50000
    protocol: TCP
    targetPort: 50000
  selector:
    app: jenkins-master
  type: LoadBalancer
