k8s/app-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: employeecare-ingress
  namespace: mypfe
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    cert-manager.io/cluster-issuer: "letsencrypt"
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: zied-employeecare.eastus.cloudapp.azure.com
    http:
      paths:
      - path: /app(.*)
        pathType: Prefix
        backend:
          service:
            name: employeecare-svc
            port:
              number: 8080
  tls:
  - hosts:
    - zied-employeecare.eastus.cloudapp.azure.com
    secretName: tls-secret
