k8s/ingress-deployment.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: employeecare
  namespace: mypfe
spec:
  rules:
  - host: zied-employeecare.eastus.cloudapp.azure.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: employeecare-svc
            port:
              number: 8080
